<resources>
    <string name="app_name">Nobuli</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="question">Question</string>
    <string name="correct_answer">Your answer is correct!</string>
    <string name="wrong_answer">Incorrect answer!</string>
    <string name="score">You scored </string>
    <string name="report_disclaimer">The report service is not replacement for 911 or any emergency services. If you are in immediate danger of being hurt as a direct threat or a medical emergency, call 911 or the appropriate authorities immediately.</string>
    <string name="report_agreement">By using the report service, users are directly consenting to launching a third-party email client and sending the email to a list of recipients set by Nobuli Admin.</string>
    <string name="about_cyberbullying">Cyberbullying or cyberharassment is a form of bullying or harassment using electronic means.\n\nCyberbullying and cyberharassment are also known as online bullying. It has become increasingly common, especially among teenagers, as the digital sphere has expanded and technology has advanced.\n\nCyberbullying is when someone, typically a teenager, bullies or hrasses others on the internet and other digital spaces, particularly on social media sites.</string>
    <string name="about_contact">E-mail: cyber999@cybersecurity.my\nSMS: CYBER999 REPORT to 15888\nTel: 1-300-88-2999</string>
    <string name="chatbot_disclaimer">All conversation with the chatbot would be recorded for the purpose of learning and improving the chatbot. By continuing to use the service, you agree to the above statement.</string>
    <string name="score2"><![CDATA[> 80%]]></string>
    <string name="score3"><![CDATA[> 50%]]></string>
    <string name="score4"><![CDATA[< 50%]]></string>
    <string-array name="quizAnswer_array">
        <item>True</item>
        <item>False</item>
    </string-array>
</resources>