<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.nobulijava.activity.UserQuizActivity">

    <TextView
        android:id="@+id/textView_userQuiz_quizNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Question - of -"
        android:textAlignment="center"
        android:textSize="18dp" />


    <ImageView
        android:id="@+id/image_quizImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_broken_image_24" />

    <TextView
        android:id="@+id/textView_takeQuiz_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal"
        android:text="@string/question"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/table_takeQuiz_scoreFeedback"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TableRow
            android:background="@color/red_700">

            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="Score" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:text="Feedback"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorLightGray">

            <TextView
                android:padding="8dp"
                android:text="100%" />

            <TextView
                android:maxEms="17"
                android:padding="8dp"
                android:text="Congratulations! You fully understand about cyberbullying! " />
        </TableRow>

        <TableRow
            android:background="@color/chatBackground">

            <TextView
                android:padding="8dp"
                android:text="@string/score2" />

            <TextView
                android:maxEms="17"
                android:padding="8dp"
                android:text="Great job! You just need to read up slightly more about cyberbullying!" />
        </TableRow>

        <TableRow
            android:background="@color/colorLightGray">

            <TextView
                android:padding="8dp"
                android:text="@string/score3" />

            <TextView
                android:maxEms="17"
                android:padding="8dp"
                android:text="You answered at least half correct! Soon you would be able to identify and understand more about cyberbullying!" />
        </TableRow>

        <TableRow
            android:background="@color/chatBackground">

            <TextView
                android:padding="8dp"
                android:text="@string/score4" />

            <TextView
                android:maxEms="17"
                android:padding="8dp"
                android:text="Don’t worry! Nobuli is here to help you understand more about cyberbullying!" />
        </TableRow>


    </TableLayout>

    <RadioGroup
        android:id="@+id/radioGroup_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/true_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/false_text"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="Previous" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="Next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_tryAgain"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="Try Again" />

        <Button
            android:id="@+id/button_mainMenu"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="Main Menu" />
    </LinearLayout>
</LinearLayout>